# uwb-core

./: .gitignore  .travis.yml  ADOPTERS.md  CMakeLists.txt  Kbuild  Makefile  Makefile.cmake  Makefile.kernel  NOTICE  README.md  README_cmake.md  README_hikey960.md  README_kernel.md  config.h.in  project.yml  repository.yml  setup.sh
apps/syscfg/: CMakeLists.txt  README.md  pkg.yml  syscfg.yml
apps/syscfg/src/: main.c
apps/twr_tag_tdma/: CMakeLists.txt  README.md  pkg.yml  syscfg.yml
apps/twr_tag_tdma/src/: main.c
doxy/: README_doxy.md  (+1 more)
lib/: CMakeLists.txt  uwb.pc.in
lib/cir/: CMakeLists.txt  README.md  pkg.yml  syscfg.yml
lib/cir/include/cir/: cir.h  cir_json.h
lib/cir/src/: cir.c  cir_chrdev.c  cir_json.c
lib/dsp/: CMakeLists.txt  pkg.yml
lib/dsp/include/dsp/: biquad.h  polyval.h  sosfilt.h
lib/dsp/selftest/: pkg.yml
lib/dsp/selftest/include/: dsp_test.h
lib/dsp/selftest/src/: dsp_test.c
lib/dsp/src/: biquad.c  polyval.c  sosfilt.c
lib/euclid/: CMakeLists.txt  pkg.yml
lib/euclid/include/euclid/: norm.h  triad.h
lib/euclid/selftest/: pkg.yml
lib/euclid/selftest/src/: euclid_test.c  euclid_test.h
lib/euclid/src/: norm.c
lib/json/: CMakeLists.txt  pkg.yml
lib/json/include/json/: json.h  json_util.h
lib/json/selftest/: pkg.yml
lib/json/selftest/include/: json_test.h
lib/json/selftest/src/: json_test.c  json_test_priv.h  json_test_utils.c
lib/json/src/: json_decode.c  json_encode.c  json_util.c
lib/nmgr_cmds/: pkg.yml
lib/nmgr_cmds/include/nmgr_cmds/: nmgr_cmds.h
lib/nmgr_cmds/src/: nmgr_cmds.c
lib/nmgr_uwb/: pkg.yml  syscfg.yml
lib/nmgr_uwb/include/nmgr_uwb/: nmgr_uwb.h
lib/nmgr_uwb/src/: nmgr_uwb.c
lib/nrng/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/nrng/include/nrng/: nrng.h  nrng_encode.h  nrng_json.h
lib/nrng/src/: nrng.c  nrng_encode.c  nrng_json.c
lib/pan_utils/: pkg.yml
lib/pan_utils/include/pan_utils/: pan_utils.h
lib/pan_utils/src/: pan_utils.c
lib/panmaster/: pkg.yml  syscfg.yml
lib/panmaster/include/panmaster/: panmaster.h  panmaster_fcb.h
lib/panmaster/selftest/: pkg.yml
lib/panmaster/selftest/include/: panmaster_test.h
lib/panmaster/selftest/src/: panmaster_test.c
lib/panmaster/src/: panmaster.c  panmaster_cbor.c  panmaster_cli.c  panmaster_fcb.c  panmaster_file.c  panmaster_priv.h
lib/rng_math/: CMakeLists.txt  pkg.yml
lib/rng_math/include/rng_math/: rng_math.h
lib/rng_math/selftest/: pkg.yml
lib/rng_math/selftest/src/: rng_math_test.c  rng_math_test.h
lib/rng_math/src/: rng_math.c
lib/rtdoa/: pkg.yml  syscfg.yml
lib/rtdoa/include/rtdoa/: rtdoa.h
lib/rtdoa/src/: rtdoa.c
lib/rtdoa_node/: pkg.yml  syscfg.yml
lib/rtdoa_node/include/rtdoa_node/: rtdoa_node.h
lib/rtdoa_node/src/: rtdoa_node.c
lib/rtdoa_tag/: pkg.yml  syscfg.yml
lib/rtdoa_tag/include/rtdoa_tag/: rtdoa_tag.h
lib/rtdoa_tag/src/: rtdoa_tag.c
lib/smp_cmds/: pkg.yml
lib/smp_cmds/src/: smp_cmds.c
lib/smp_uwb/: pkg.yml  syscfg.yml
lib/smp_uwb/src/: smp_uwb.c
lib/survey/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/survey/src/: survey.c  survey_encode.c
lib/tdma/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/tdma/src/: tdma.c
lib/tofdb/: pkg.yml  syscfg.yml
lib/tofdb/selftest/: pkg.yml
lib/tofdb/src/: tofdb.c  tofdb_cli.c
lib/twr_ds/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/twr_ds/src/: twr_ds.c
lib/twr_ds_ext/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/twr_ds_ext/src/: twr_ds_ext.c
lib/twr_ds_ext_nrng/: pkg.yml  syscfg.yml
lib/twr_ds_ext_nrng/src/: twr_ds_ext_nrng.c
lib/twr_ds_nrng/: pkg.yml  syscfg.yml
lib/twr_ds_nrng/src/: twr_ds_nrng.c
lib/twr_ss/: CMakeLists.txt  README.md  pkg.yml  ss_twr.logicdata  ss_twr.md  syscfg.yml
lib/twr_ss/src/: twr_ss.c
lib/twr_ss_ack/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/twr_ss_ack/src/: twr_ss_ack.c
lib/twr_ss_ext/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/twr_ss_ext/src/: twr_ss_ext.c
lib/twr_ss_ext_nrng/: pkg.yml  syscfg.yml
lib/twr_ss_ext_nrng/src/: twr_ss_ext_nrng.c
lib/twr_ss_nrng/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/twr_ss_nrng/src/: twr_ss_nrng.c
lib/uwb_ccp/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/uwb_ccp/src/: ccp_chrdev.c  ccp_json.c  ccp_sysfs.c  uwb_ccp.c
lib/uwb_pan/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/uwb_pan/src/: uwb_pan.c
lib/uwb_rf_tests/desense/: CMakeLists.txt  pkg.yml
lib/uwb_rng/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/uwb_rng/selftest/: pkg.yml  syscfg.yml
lib/uwb_rng/src/: rng_chrdev.c  rng_encode.c  rng_json.c  rng_sysfs.c  slots.c  uwb_rng.c
lib/uwb_softfloat/: pkg.yml
lib/uwb_softfloat/selftest/: pkg.yml
lib/uwb_softfloat/src/: f128M_add.c  f128M_div.c  f128M_eq.c  f128M_eq_signaling.c  f128M_isSignalingNaN.c  f128M_le.c  f128M_le_quiet.c  f128M_lt.c  f128M_lt_quiet.c  f128M_mul.c  f128M_mulAdd.c  f128M_rem.c  f128M_roundToInt.c  f128M_sqrt.c  f128M_sub.c  f128M_to_f32.c  f128M_to_f64.c  f128M_to_i32.c  f128M_to_i32_r_minMag.c  f128M_to_i64.c  f128M_to_i64_r_minMag.c  f128M_to_ui32.c  f128M_to_ui32_r_minMag.c  f128M_to_ui64.c  f128M_to_ui64_r_minMag.c  f32_add.c  f32_div.c  f32_eq.c  f32_eq_signaling.c  f32_isSignalingNaN.c  f32_le.c  f32_le_quiet.c  f32_lt.c  f32_lt_quiet.c  f32_mul.c  f32_mulAdd.c  f32_rem.c  f32_roundToInt.c  f32_sqrt.c  f32_sub.c  (+119 more)
lib/uwb_transport/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/uwb_transport/src/: uwb_transport.c
lib/uwb_wcs/: CMakeLists.txt  pkg.yml  syscfg.yml
lib/uwb_wcs/src/: uwb_wcs.c  wcs_chrdev.c  wcs_json.c  wcs_timescale.c
porting/dpl/linux/: CMakeLists.txt
porting/dpl_lib/: CMakeLists.txt  pkg.yml  syscfg.yml
porting/dpl_lib/src/: dpl_cputime.c  dpl_cputime_high.c  dpl_cputime_pwr2.c  dpl_mbuf.c  dpl_mem.c  dpl_mempool.c  dpl_msys_init.c  dpl_syscli.c  endian.c  streamer.c  streamer_console.c
porting/dpl_os/: CMakeLists.txt  pkg.yml
porting/dpl_os/src/: config.c  config_cli.c  config_file.c  config_init.c  config_priv.h  config_store.c  console.c  console_fmt.c  log_stub.c  os_cputime.c  os_dev.c  os_mbuf.c  os_mempool.c  shell.c  shell_nlip.c  shell_priv.h  stats.c  stats_shell.c  ticks.c  uart_console.c
(+406 files in other folders)
